# micropython

./: .gitignore  .gitmodules  build.sh
.github/workflows/: code_formatting.yml  code_size.yml  commit_formatting.yml  docs.yml  mpremote.yml  ports_esp32.yml  ports_unix.yml  ports_windows.yml
extmod/: machine_i2s.c
modules/: micropython.cmake  p4_modules.cmake
modules/csi_camera/: csi_camera.c  csi_camera_hal.c  csi_camera_hal.h  example.py  idf_component.yml  micropython.cmake
modules/espsrmod/: README.md  espsr_audio.c  espsr_audio.h  espsrmod.c  micropython.cmake  sdkconfig.espsr  wakenet_ops.c  wakenet_ops.h
modules/ml307mod/: CMakeLists.txt  README.md  micropython.cmake  ml307_at.c  ml307_at.cc  ml307_at.h  ml307_hex.h  ml307_mod.c  ml307call.cpp  ml307call.h  ml307mod.c
modules/multinetmod/: micropython.cmake  multinet_ops.c  multinet_ops.h  multinetmod.c
modules/opusmod2/: README.md  example_test.py  idf_component.yml  micropython.cmake  opusmod2.c  opusmod2_wrapper.cpp  opusmod2_wrapper.h
modules/qrscan/: micropython.cmake  modqrscan.c  qrscan_alloc.c  qrscan_alloc.h  qrscan_resize.c  qrscan_resize.h
modules/vision_ml/: README.md  idf_component.yml  micropython.cmake  vision_ml.c  vision_ml_engine.cpp  vision_ml_engine.h  vision_ml_head.c  vision_ml_head.h  vision_ml_manifest.c  vision_ml_manifest.h
ports/esp32/: machine_i2s.c  modmachine.c  mpconfigport.h  partitions-16MiB-custom.csv
tests/vision_ml/: test_camera_e2e.py  test_engine.py  test_fake_head.py  test_images.py
tools/: build_backbone.py  fetch_imagenet_calib.py  make_fake_head.py
(+15 files in other folders)
